[package]
name = "pantyhose"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
bytes = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bincode = "1.3"
md5 = "0.7"
rand = "0.8"
prost = "0.12"

[build]
target-dir = "./bin"
